# pelatihanp2i-1

./: helloworld.c
contoh.cmake/contoh.2.header/: CMakeLists.txt
contoh.cmake/contoh.2.header/include/: Product.h
contoh.cmake/contoh.2.header/src/: Product.cpp  main.cpp
contoh.cmake/contoh.3.shared/: CMakeLists.txt
contoh.cmake/contoh.3.shared/src/: Product.cpp  main.cpp
contoh.cuda/: hello.cu  kern.cu
